--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,8 @@ jobs:
           project_id: ${{ env.PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+      - name: Echo Google Var
+        run: echo $GCLOUD_PROJECT
       - name: Deploy to Cloud Run
         id: dcr
         uses: google-github-actions/deploy-cloudrun@v0.4.0
