--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           layers: false
           tags: ${{ env.IMAGE_TAGS }}
           dockerfiles: |
-            ./Containerfile
+            ./Dockerfile
       # Uses the `podman/login` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
       - name: Log in to the Container registry
         uses: redhat-actions/podman-login@v1
