--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT }}
   REGION: us-east1
-  SERVICE: ${{ github.GCP_PROJECT }}
+  SERVICE: ${{ secrets.GCP_PROJECT }}
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
