--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,17 +48,17 @@ jobs:
           registry: ${{ env.IMAGE_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Push To Github Packages
-        id: push-step
-        uses: redhat-actions/push-to-registry@v2
-        with:
-          image: ${{ steps.build-image.outputs.image }}
-          tags: ${{ steps.build-image.outputs.tags }}
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Print image url
-        run: echo "Image pushed to ${{ steps.push-step.outputs.registry-paths }}"
+      # - name: Push To Github Packages
+      #   id: push-step
+      #   uses: redhat-actions/push-to-registry@v2
+      #   with:
+      #     image: ${{ steps.build-image.outputs.image }}
+      #     tags: ${{ steps.build-image.outputs.tags }}
+      #     registry: ${{ env.REGISTRY }}
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Print image url
+      #   run: echo "Image pushed to ${{ steps.push-step.outputs.registry-paths }}"
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push-image
@@ -69,8 +69,10 @@ jobs:
           project_id: ${{ env.PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+      
       - name: Echo Google Var
-        run: echo $GCLOUD_PROJECT
+        run: gcloud info
+
       - name: Deploy to Cloud Run
         id: dcr
         uses: google-github-actions/deploy-cloudrun@v2.2.0
