--- a/.github/workflows/.publish-ghcr.yml
+++ b/.github/workflows/.publish-ghcr.yml
@@ -10,7 +10,7 @@ on:
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT }}
   REGION: us-east1
-  SERVICE: ${{ github.GCP_PROJECT }}
+  SERVICE: ${{ secrets.GCP_PROJECT }}
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
@@ -32,7 +32,7 @@ jobs:
         if: matrix.install_latest
         run: |
           bash .github/install_latest_podman.sh
-            # Build image using Buildah action
+      # Build image using Buildah action
       - name: Build Image
         id: build-image
         uses: redhat-actions/buildah-build@v2
@@ -60,24 +60,3 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Print image url
         run: echo "Image pushed to ${{ steps.push-step.outputs.registry-paths }}"
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Cloud cli
-        uses: google-github-actions/setup-gcloud@v0.2.0
-        with:
-          project_id: ${{ env.PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-      - name: Echo Google Var
-        run: echo $GCLOUD_PROJECT
-      - name: Deploy to Cloud Run
-        id: dcr
-        uses: google-github-actions/deploy-cloudrun@v0.4.0
-        with:
-          service: ${{ env.SERVICE }}
-          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{  github.sha }}
-          region: ${{ env.REGION }}
-
-      - name: Show Output
-        run: echo ${{ steps.dcr.outputs.url }}
